<resources>
    <string name="app_name">HRChart</string>

    <!--  common  -->
    <string name="employee_list">従業員一覧</string>
    <string name="employee_info">従業員情報</string>
    <string name="recruitment_list">年間採用一覧</string>
    <string name="select_year">年度選択</string>
    <string name="add_emp">新規登録</string>
    <string name="ok">OK</string>
    <string name="cancel">キャンセル</string>
    <string name="yes">はい</string>
    <string name="no">いいえ</string>
    <string name="search">検索</string>
    <string name="all">すべて</string>
    <string name="clear">クリア</string>
    <string name="interview_memo">面談メモ</string>

    <!--  従業員情報関連  -->
    <string name="emp_name">名前</string>
    <string name="emp_phonetic">フリガナ</string>
    <string name="emp_birth">生年月日</string>
    <string name="emp_gender">性別</string>
    <string name="emp_age">年齢</string>
    <string name="emp_media">媒体</string>
    <string name="emp_job">職種</string>
    <string name="emp_area">エリア</string>
    <string name="emp_status">ステータス</string>
    <string name="emp_skill">スキル</string>
    <string name="emp_solution">ソリューション</string>
    <string name="emp_emp_status">雇用形態</string>
    <string name="emp_remarks">備考欄</string>
    <string name="emp_office_phone">会社用携帯</string>
    <string name="emp_office_mail">会社用メール</string>
    <string name="emp_private_phone">個人用携帯</string>
    <string name="emp_private_mail">個人用メール</string>
    <string name="emp_pic1">面談担当者1</string>
    <string name="emp_pic2">面談担当者2</string>
    <string name="emp_application_date">応募日</string>
    <string name="emp_interview_date">面談日</string>
    <string name="emp_joined_date">入社日</string>
    <string name="emp_retirement_date">退社日</string>
    <string name="emp_accepted_date">内定承諾日</string>
    <string name="emp_decision_month">決定月</string>
    <string name="emp_div_application">応募区分</string>
    <string name="emp_rank">ランク</string>
    <string name="enrollment">在職</string>
    <string name="retirement">退職</string>

    <!-- 従業員検索関連-->
    <string name="clear_filter">検索条件をクリアする</string>
    <string name="search_filter">絞り込み検索</string>

    <!-- msg -->
    <string name="confirm_logout">ログアウトしますか？</string>
    <string name="error_search_filter_title">検索結果が見つかりません</string>
    <string name="error_search_filter_msg">検索条件を変更して再度検索してください</string>

    <!-- ログイン画面 -->
    <string name="login_title">ログイン</string>
    <string name="hr_chat_title">人事カルテシステム</string>
    <string name="login_btn">ログイン</string>
    <string name="password">パスワード</string>

    <!--  年間採用一覧関連  -->
    <string name="year_adoption_2024">2024年度</string>
    <string name="year_adoption_2023">2023年度</string>
    <string name="year_adoption_2022">2022年度</string>

    <!-- test -->
    <string name="interview_memo_text">ID：%1$s の面談メモです</string>

</resources>