<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.example.hrchart.yearadoption.view.YearAdoptionSelectYearViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".yearadoption.view.YearAdoptionSelectYearFragment">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingHorizontal="@dimen/padding_16"
            android:orientation="vertical"
            android:gravity="center">

        <!-- 2024年度 -->
        <Button
            style="@style/WhiteText"
            android:id="@+id/year_adoption_to_2024"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/year_adoption_2024" />

        <!-- 2023年度 -->
        <Button
            style="@style/WhiteText"
            android:id="@+id/year_adoption_to_2023"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16"
            android:text="@string/year_adoption_2023" />

        <!-- 2022年度 -->
        <Button
            style="@style/WhiteText"
            android:id="@+id/year_adoption_to_2022"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16"
            android:text="@string/year_adoption_2022" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <!-- 境界線 -->
        <View
            android:id="@+id/year_adoption_divider"
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider_height"
            android:background="@color/gray"
            app:layout_constraintBottom_toTopOf="@id/year_adoption_footer"/>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/year_adoption_footer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/light_gray"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <!-- 従業員一覧ボタン -->
            <Button
                android:id="@+id/year_adoption_footer_list_button"
                style="@style/FooterButtonText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="0dp"
                android:layout_weight="1"
                android:text="@string/employee_list"
                android:drawableTop="@drawable/ic_list_cyan"
                android:backgroundTint="@android:color/transparent" />

            <!-- 年間採用一覧ボタン -->
            <Button
                android:id="@+id/year_adoption_footer_recruit_button"
                style="@style/FooterButtonText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="0dp"
                android:layout_weight="1"
                android:text="@string/recruitment_list"
                android:drawableTop="@drawable/ic_calendar_cyan"
                android:backgroundTint="@android:color/transparent"/>

            <!-- 新規登録ボタン -->
            <Button
                android:id="@+id/year_adoption_footer_add_emp_button"
                style="@style/FooterButtonText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="0dp"
                android:visibility="gone"
                android:layout_weight="1"
                android:text="@string/add_emp"
                android:drawableTop="@drawable/ic_add_cyan"
                android:backgroundTint="@android:color/transparent"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>