<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.example.hrchart.login.view.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".login.view.LoginFragment">

        <!-- アプリタイトル -->
        <TextView
            android:id="@+id/login_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:text="@string/hr_chat_title"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/edit_text_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <!-- パスワード入力欄 -->
        <EditText
            android:id="@+id/edit_text_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="30dp"
            android:autofillHints="@string/password"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:text=""
            android:focusable="true"
            android:focusableInTouchMode="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- ログインボタン -->
        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="15dp"
            android:enabled="@{viewModel.isEnabled}"
            android:text="@{viewModel.buttonText}"
            android:textColor="#FFFFFF"
            android:backgroundTint="#00a1e9"
            android:topRightRadius="20dp"
            android:bottomRightRadius="20dp"
            android:bottomLeftRadius="20dp"
            android:topLeftRadius="20dp"
            app:layout_constraintEnd_toEndOf="@+id/edit_text_password"
            app:layout_constraintStart_toStartOf="@+id/edit_text_password"
            app:layout_constraintTop_toBottomOf="@+id/edit_text_password"
            tools:text="@string/login_btn" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>