<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.example.hrchart.addemp.view.AddEmpViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".addemp.view.AddEmpFragment">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_emp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <!-- 境界線 -->
        <View
            android:id="@+id/add_emp_divider"
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider_height"
            android:background="@color/gray"
            app:layout_constraintBottom_toTopOf="@id/add_emp_footer"/>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/add_emp_footer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/light_gray"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <!-- 従業員一覧ボタン -->
            <Button
                android:id="@+id/add_emp_footer_list_button"
                style="@style/FooterButtonText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="0dp"
                android:layout_weight="1"
                android:text="@string/employee_list"
                android:drawableTop="@drawable/ic_list_cyan"
                android:backgroundTint="@android:color/transparent" />

            <!-- 年間採用一覧ボタン -->
            <Button
                android:id="@+id/add_emp_footer_recruit_button"
                style="@style/FooterButtonText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="0dp"
                android:layout_weight="1"
                android:text="@string/recruitment_list"
                android:drawableTop="@drawable/ic_calendar_cyan"
                android:backgroundTint="@android:color/transparent"/>

            <!-- 新規登録ボタン -->
            <Button
                android:id="@+id/add_emp_footer_add_emp_button"
                style="@style/FooterButtonText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="0dp"
                android:layout_weight="1"
                android:text="@string/add_emp"
                android:drawableTop="@drawable/ic_add_cyan"
                android:backgroundTint="@android:color/transparent"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>