<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.example.hrchart.emp.view.EmpSearchViewModel" />
    </data>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/emp_search_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/margin_16"
            app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior" >

            <EditText
                android:id="@+id/emp_search_name_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="名前"
                android:inputType="text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:id="@+id/emp_search_status_dropdown_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_16"
                android:hint="@string/emp_status"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/emp_search_area_dropdown_label"
                app:layout_constraintTop_toBottomOf="@id/emp_search_name_et"
                >
                <AutoCompleteTextView
                    android:id="@+id/emp_search_status_dropdown_item"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    android:text="@string/enrollment"
                    tools:ignore="LabelFor" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:id="@+id/emp_search_area_dropdown_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_16"
                android:layout_marginStart="4dp"
                android:hint="@string/emp_area"
                app:layout_constraintStart_toEndOf="@id/emp_search_status_dropdown_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/emp_search_name_et"
                >
                <AutoCompleteTextView
                    android:id="@+id/emp_search_area_dropdown_item"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    android:text="東京"
                    tools:ignore="LabelFor" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:id="@+id/emp_search_job_dropdown_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_16"
                android:hint="@string/emp_job"
                app:layout_constraintWidth_percent="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/emp_search_status_dropdown_label"
                >
                <AutoCompleteTextView
                    android:id="@+id/emp_search_job_dropdown_item"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:inputType="none"
                    android:text="開発エンジニア"
                    tools:ignore="LabelFor" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/emp_search_close_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_16"
                android:backgroundTint="@color/gray"
                android:textColor="@color/black"
                android:text="close"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/emp_search_job_dropdown_label" />

        </androidx.constraintlayout.widget.ConstraintLayout>

</layout>